# Fabula

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
examples/: template.html
examples/legacy/: example1.c
src/: CMakeLists.txt
src/HTMLGeneratorInterface/: CMakeLists.txt  cmd_helper.h  html_writer.h  source.cpp
src/ParseNodes/: CMakeLists.txt  choice.cpp  choice.h  destination.cpp  destination.h  fstring.cpp  fstring.h  header.cpp  header.h  parse_node.h  parse_nodes.h  parse_tree_visitor.cpp  parse_tree_visitor.h  scene.cpp  scene.h  section.cpp  section.h
src/Parser/: CMakeLists.txt  Grammar.flex  Grammar.ypp  LexerInclusionGraph.h  LexerState.h  fparser.cpp  fparser.h  fyystype.h  lexer_include_graph.h  lexer_state.h  visitor_parent_binder.cpp  visitor_parent_binder.h  visitor_semantic_checker.cpp  visitor_semantic_checker.h  visitor_string_parameter_generator.h  visitor_writer.cpp  visitor_writer.h
src/ParserCommandLine/: CMakeLists.txt  parse_exception.h  source.cpp
src/common/: file_io.cpp  file_io.h  log.cpp  log.h  macros.h  parse_exception.h  util.h  writer.h  xml_writer.cpp  xml_writer.h
tests/: test.py
tests/0_check_test_match/: control.json
tests/1_check_basic_scene/: control.json  expected.txt  test.fab
tests/1_check_test_no_match/: control.json
tests/2_check_multiple_scenes/: expected.txt
tests/3_check_multiple_scenes/: control.json  test.fab
tests/3_check_section/: test.fab
tests/4_check_include/: B.fab  expected.txt  test.fab
tests/5_check_multiple_includes/: B.fab  test.fab
tests/6_check_include_itself/: expected.txt  test.fab
tests/7_check_triangle_include/: B.fab  C.fab  control.json  test.fab
